# tokentrace-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/: ROADMAP.md  project_description.md  workflow.md
.github/workflows/: ci.yml
crates/tokentrace-adapter-claude-code/: Cargo.toml
crates/tokentrace-adapter-claude-code/src/: lib.rs
crates/tokentrace-adapters/: Cargo.toml
crates/tokentrace-adapters/src/: lib.rs
crates/tokentrace-cli/: Cargo.toml
crates/tokentrace-cli/src/: git.rs  main.rs  provider.rs  store.rs  tui.rs
crates/tokentrace-cli/src/adapters/: claude_code.rs  codex.rs  mod.rs
crates/tokentrace-core/: Cargo.toml
crates/tokentrace-core/src/: adapter.rs  confidence.rs  lib.rs  model.rs  source.rs  warning.rs
crates/tokentrace-git/: Cargo.toml
crates/tokentrace-git/src/: lib.rs
crates/tokentrace-store/: Cargo.toml
crates/tokentrace-store/src/: lib.rs
crates/tokentrace-tui/: Cargo.toml
crates/tokentrace-tui/src/: lib.rs
docs/: adapters.md  privacy.md
docs/research/: claude-code.md
fixtures/claude-code/: native_transcript.jsonl  otlp_logs.json  otlp_metrics.json
fixtures/codex/: rollout.jsonl
