[workspace]
resolver = "2"
members = [
    "crates/tokentrace-core",
    "crates/tokentrace-cli",
]

[workspace.package]
version = "0.13.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Niox1337/tokentrace-cli"
homepage = "https://github.com/Niox1337/tokentrace-cli"
keywords = ["tokens", "cost", "llm", "telemetry", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
tokentrace-core = { path = "crates/tokentrace-core" }

clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
