[package]
name = "tokentrace-cli"
description = "Local-first token and cost profiler for coding agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "tokentrace"
path = "src/main.rs"

[dependencies]
tokentrace-core = { workspace = true }
clap = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
